fix. organizacion de z-index en todos los elementos

--- a/src/accesibilidad/ir-contenido-principal.scss
+++ b/src/accesibilidad/ir-contenido-principal.scss
@@ -19,7 +19,7 @@
   position: absolute;
   justify-content: center;
   transform: translateY(-100%);
-  z-index: 111;
+  z-index: 99999;
   width: 100%;
   border-radius: 0;
   &:focus {
