--- a/src/componentes/boton-flotante.scss
+++ b/src/componentes/boton-flotante.scss
@@ -22,7 +22,7 @@
   position: fixed;
   bottom: map-get($espaciado, '4');
   left: map-get($espaciado, '4');
-  z-index: 3;
+  z-index: 99;
 
   .boton-flotante-alternador {
     border: none;
