--- a/src/componentes/globo-informacion.scss
+++ b/src/componentes/globo-informacion.scss
@@ -24,7 +24,7 @@
   max-width: 240px;
 
   gap: map-get($espaciado, '1');
-  z-index: 9999;
+  z-index: 99;
 
   > * {
     font-size: 0.75rem;
