--- a/src/compuestos/vista-cargando.scss
+++ b/src/compuestos/vista-cargando.scss
@@ -2,7 +2,7 @@
 
 .vista-cargando {
   background: rgba(0, 0, 0, 0.2);
-  z-index: 10;
+  z-index: 9;
   display: flex;
   justify-content: center;
   align-items: center;
